Fix HTML formatting and update project status

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>(COMING SOON) Blaze Vanilla</h3>
+                    <h3>(SOON) Blaze Vanilla</h3>
                     <p>An upcoming crystal shop survival for Minecraft. BlazeVanilla.org</p>
                 </div>
                 <div class="project-card">
@@ -109,3 +109,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
