--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                     <h3>ShoreSMP Giveaways</h3>
                     <p>discord.gg/shoregiveaways - I'm a manager, I made the discord bots, and I mainly run it.</p>
                 </div>
+                <div class="project-card">
+                    <h3>Monarx Studios</h3>
+                    <p>discord.gg/monarx - Monarx Studios, is a innovated coding space where people can get freelancers, or the Monarx Team, to Moderate, Administrate, Manage, and Develop, you Roblox, Fortnite, Minecraft Server! Anything you need!</p>
+                </div>
             </div>
         </div>
     </section>
@@ -109,4 +113,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
