--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="project-card">
                     <h3>Monarx Studios</h3>
-                    <p>discord.gg/monarx - Monarx Studios, is a innovated coding space where people can get freelancers, or the Monarx Team, to Moderate, Administrate, Manage, and Develop, you Roblox, Fortnite, Minecraft Server! Anything you need!</p>
+                    <p>discord.gg/monarx - Monarx is a professional service provider dedicated to helping communities and other projects achieve excellence and success.</p>
                 </div>
             </div>
         </div>
@@ -113,5 +113,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
