Modify project section in index.html
Updated project details and added new project TrimSMP.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
+                    <h3>TrimSMP</h3>
+                    <p>TrimSMP is a fun and cool Minecraft server for Cracked, Bedrock, and Java!</p>
+                </div>
+                <div class="project-card">
                     <h3>(SOON) Blaze Vanilla</h3>
                     <p>An upcoming crystal shop survival for Minecraft. BlazeVanilla.org</p>
                 </div>
@@ -114,4 +118,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
